--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           class="w-full container mx-auto flex flex-col sm:flex-row items-center justify-center text-sm font-bold uppercase mt-0 px-6 py-2"
         >
           <a
-            href="../congnghe/blog.html"
+            href="../EasyTech/congnghe/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tin tức công nghệ</a
           >
