--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
       <section class="w-full md:w-2/3 flex flex-col items-center px-3">
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="/congnghe/post.html" class="hover:opacity-75 image-wrapper">
+          <a
+            href="../EasyTech../EasyTech/congnghe/post.html"
+            class="hover:opacity-75 image-wrapper"
+          >
             <img
               src="https://genk.mediacdn.vn/139269124445442048/2024/11/25/r60149-17325113555411815262725-1732519342657-1732519342845393324934.jpg"
               class="responsive-image"
@@ -179,7 +182,7 @@
               >Thông tin công nghệ</a
             >
             <a
-              href="/congnghe/post.html"
+              href="../EasyTech/congnghe/post.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Tổng Giám đốc HP Đông Nam Á: Người biết dùng AI sẽ thay thế bạn,
@@ -190,12 +193,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="/congnghe/post.html" class="pb-6">
+            <a href="../EasyTech/congnghe/post.html" class="pb-6">
               HP nhìn nhận AI là xu hướng không thể tránh khỏi và là động lực
               chính thúc đẩy ngành công nghệ trong thập kỷ tới...
             </a>
             <a
-              href="/congnghe/post.html"
+              href="../EasyTech/congnghe/post.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
