--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
           <a
-            href="../EasyTech../EasyTech/congnghe/post.html"
+            href="../EasyTech/congnghe/post.html"
             class="hover:opacity-75 image-wrapper"
           >
             <img
