--- a/congnghe/index.html
+++ b/congnghe/index.html
@@ -147,12 +147,12 @@
             >Tin tức công nghệ</a
           >
           <a
-            href="../sanpham/blog.html"
+            href="sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="../tuvan/blog.html"
+            href="tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -165,7 +165,7 @@
       <section class="w-full md:w-2/3 flex flex-col items-center px-3">
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post.html" class="hover:opacity-75 image-wrapper">
+          <a href="congnghe/post.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://genk.mediacdn.vn/139269124445442048/2024/11/25/r60149-17325113555411815262725-1732519342657-1732519342845393324934.jpg"
               class="responsive-image"
@@ -174,12 +174,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="congnghe/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Thông tin công nghệ</a
             >
             <a
-              href="post.html"
+              href="congnghe/post.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Tổng Giám đốc HP Đông Nam Á: Người biết dùng AI sẽ thay thế bạn,
@@ -190,11 +190,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post.html" class="pb-6">
+            <a href="congnghe/post.html" class="pb-6">
               HP nhìn nhận AI là xu hướng không thể tránh khỏi và là động lực
               chính thúc đẩy ngành công nghệ trong thập kỷ tới...
             </a>
-            <a href="post.html" class="uppercase text-gray-800 hover:text-black"
+            <a
+              href="congnghe/post.html"
+              class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
           </div>
@@ -202,7 +204,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post2.html" class="hover:opacity-75 image-wrapper">
+          <a href="congnghe/post2.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://images.macrumors.com/t/EaoChXA2K-VYL2M7WhHRqf9f9Ts=/1600x1200/smart/article-new/2024/11/Generic-iOS-19-Feature-Mock.jpg"
               class="responsive-image"
@@ -211,12 +213,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="congnghe/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Thông tin công nghệ</a
             >
             <a
-              href="post2.html"
+              href="congnghe/post2.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               IOS 19 hé lộ tính năng đầu tiên
@@ -226,12 +228,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post2.html" class="pb-6">
+            <a href="congnghe/post2.html" class="pb-6">
               Tuy nhiên, người dùng sẽ phải chờ đợi tới năm 2026 mới được trải
               nghiệm đầy đủ tính năng của iOS 19.
             </a>
             <a
-              href="post2.html"
+              href="congnghe/post2.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
@@ -240,7 +242,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post3.html" class="hover:opacity-75 image-wrapper">
+          <a href="congnghe/post3.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://genk.mediacdn.vn/zoom/260_162/139269124445442048/2024/10/31/gsmarena001-1730404928058-1730404930251963217206-0-57-675-1137-crop-1730405137791349368972.jpg"
               class="responsive-image"
@@ -249,12 +251,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="congnghe/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Thông tin công nghệ</a
             >
             <a
-              href="post3.html"
+              href="congnghe/post3.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               ChatGPT Search ra mắt, Google sắp hết thời?
@@ -264,12 +266,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post3.html" class="pb-6">
+            <a href="congnghe/post3.html" class="pb-6">
               Tính năng tìm kiếm mới cho phép ChatGPT cập nhật các thông tin như
               thời tiết, chứng khoán, thể thao một cách tức thời.
             </a>
             <a
-              href="post3.html"
+              href="congnghe/post3.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
