--- a/sanpham/index.html
+++ b/sanpham/index.html
@@ -162,12 +162,12 @@
             >Tin tức công nghệ</a
           >
           <a
-            href="../sanpham/blog.html"
+            href="sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="../tuvan/blog.html"
+            href="tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -180,7 +180,7 @@
       <section class="w-full md:w-2/3 flex flex-col items-center px-3">
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post.html" class="hover:opacity-75 image-wrapper">
+          <a href="sanpham/post.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdn-media.sforum.vn/storage/app/media/thanhdat/danh-gia-pin-iphone-16/iphone-16-2.jpg"
               class="responsive-image"
@@ -189,12 +189,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="sanpham/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Đánh giá sản phẩm</a
             >
             <a
-              href="post.html"
+              href="sanpham/post.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Đánh giá chi tiết iPhone 16: Một mẫu iPhone rất đáng mua nếu bạn
@@ -205,12 +205,14 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post.html" class="pb-6">
+            <a href="sanpham/post.html" class="pb-6">
               Trong 4 mẫu iPhone năm nay, mẫu iPhone 16 và iPhone 16 Plus dành
               được sự quan tâm từ nhiều người dùng nhờ sự thay đổi về thiết kế
               so với thế hệ tiền nhiệm.
             </a>
-            <a href="post.html" class="uppercase text-gray-800 hover:text-black"
+            <a
+              href="sanpham/post.html"
+              class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
           </div>
@@ -218,7 +220,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post2.html" class="hover:opacity-75 image-wrapper">
+          <a href="sanpham/post2.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdn-media.sforum.vn/storage/app/media/truongan/asus-vivobook-s-14/danh-gia-asus-vivobook-s-14%20(41).jpg"
               class="responsive-image"
@@ -229,12 +231,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="sanpham/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Đánh giá sản phẩm</a
             >
             <a
-              href="post2.html"
+              href="sanpham/post2.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Đánh giá ASUS Vivobook S 14: Ryzen 9 AI quá mạnh, ai mua bản Intel
@@ -245,13 +247,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post2.html" class="pb-6">
+            <a href="sanpham/post2.html" class="pb-6">
               ASUS Vivobook S 14 (M5406) - phiên bản nâng cấp cuối năm với CPU
               Ryzen 9 AI 370HX quả thật đã khuynh đảo ultrabook về hiệu năng lẫn
               thời lượng pin cho đến cả bây giờ.
             </a>
             <a
-              href="post2.html"
+              href="sanpham/post2.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
@@ -260,7 +262,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post3.html" class="hover:opacity-75 image-wrapper">
+          <a href="sanpham/post3.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdn-media.sforum.vn/storage/app/media/chidung/danh-gia-honor-magicbook-art-14/danh-gia-honor-magicbook-art-14-30.jpg"
               class="responsive-image"
@@ -269,12 +271,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="sanpham/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Đánh giá sản phẩm</a
             >
             <a
-              href="post3.html"
+              href="sanpham/post3.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Đánh giá Honor MagicBook Art 14: Cấu hình đỉnh, thiết kế siêu nhẹ,
@@ -285,13 +287,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post3.html" class="pb-6">
+            <a href="sanpham/post3.html" class="pb-6">
               Vào tháng 7 ngay năm nay, Honor đã ra mắt MagicBook Art 14 cho thị
               trường Trung Quốc, mẫu laptop này sở hữu màn hình gần 15 inch với
               tỷ lệ khung hình 3:2 rất tiện lợi và webcam rời độc đáo.
             </a>
             <a
-              href="post3.html"
+              href="sanpham/post3.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
