--- a/tuvan/index.html
+++ b/tuvan/index.html
@@ -162,12 +162,12 @@
             >Tin tức công nghệ</a
           >
           <a
-            href="../sanpham/blog.html"
+            href="sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="../tuvan/blog.html"
+            href="tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -180,7 +180,7 @@
       <section class="w-full md:w-2/3 flex flex-col items-center px-3">
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post.html" class="hover:opacity-75 image-wrapper">
+          <a href="tuvan/post.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/tgdd/News/Thumb/1572616/tgdd-redmi-pad-se-8.7-4g-t638684697669512758.jpg"
               class="responsive-image"
@@ -189,12 +189,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Tư vấn</a
             >
             <a
-              href="post.html"
+              href="tuvan/post.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng
@@ -205,11 +205,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post.html" class="pb-6">
+            <a href="tuvan/post.html" class="pb-6">
               Công nghệ số hiện nay đã len lỏi vào từng ngóc ngách cuộc sống, kể
               cả với những người lớn tuổi.
             </a>
-            <a href="post.html" class="uppercase text-gray-800 hover:text-black"
+            <a
+              href="tuvan/post.html"
+              class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
           </div>
@@ -217,7 +219,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post2.html" class="hover:opacity-75 image-wrapper">
+          <a href="tuvan/post2.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/common/News/0/OPPO%20Find%20X8-23%20%281%29.jpg"
               class="responsive-image"
@@ -227,12 +229,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Đánh giá sản phẩm</a
             >
             <a
-              href="post2.html"
+              href="tuvan/post2.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Đây chính là 5 lí do khiến bạn phải rút ví đặt mua OPPO Find X8
@@ -243,12 +245,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post2.html" class="pb-6">
+            <a href="tuvan/post2.html" class="pb-6">
               OPPO Find X8 Series vừa chính thức ra mắt đã tạo nên một cơn sốt
               thực sự trong giới công nghệ.
             </a>
             <a
-              href="post2.html"
+              href="tuvan/post2.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
@@ -257,7 +259,7 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="post3.html" class="hover:opacity-75 image-wrapper">
+          <a href="tuvan/post3.html" class="hover:opacity-75 image-wrapper">
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-1.jpg"
               class="responsive-image"
@@ -266,12 +268,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="blog.html"
+              href="tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Tư vấn</a
             >
             <a
-              href="post3.html"
+              href="tuvan/post3.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI
@@ -282,13 +284,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="post3.html" class="pb-6">
+            <a href="tuvan/post3.html" class="pb-6">
               Năm 2024 đánh dấu sự bùng nổ của trí tuệ nhân tạo (AI) trong mọi
               lĩnh vực, và ngành công nghiệp laptop cũng không nằm ngoài xu
               hướng này.
             </a>
             <a
-              href="post3.html"
+              href="tuvan/post3.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
